<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical" >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            >
            <TextView
                style="@style/ShadowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/label_email_address"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text" />

            <AutoCompleteTextView
                android:id="@+id/et_email"
                style="@style/SignInEditText"
                android:completionThreshold="1"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/et_password" />

            <TextView
                style="@style/ShadowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/label_password"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text" />

            <EditText
                android:id="@+id/et_password"
                style="@style/SignInEditText"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:password="true" />

            <Button
                android:id="@+id/b_signin"
                style="@style/ShadowText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_background_states"
                android:gravity="center"
                android:onClick="handleLogin"
                android:padding="10dp"
                android:text="@string/label_sign_in"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/b_register"
                style="@style/ShadowText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background_states"
                android:gravity="center"
                android:onClick="handleLogin"
                android:padding="10dp"
                android:text="@string/label_register"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


</LinearLayout>